--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
 	"dependencies": {
 		"@emotion/react": "^11.10.6",
 		"@emotion/styled": "^11.10.6",
-		"@material-ui/core": "^4.12.4",
+		"@material-ui/core": "^5.0.0-beta.5",
 		"@material-ui/icons": "^4.11.3",
 		"@material-ui/lab": "^4.0.0-alpha.61",
+		"@material-ui/styles": "^4.11.5",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
@@ -17,8 +18,10 @@
 		"react-color": "^2.19.3",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.8.0",
-		"react-router-dom": "^6.9.0",
+		"react-redux": "^8.0.5",
+		"react-router-dom": "^6.10.0",
 		"react-scripts": "5.0.1",
+		"redux": "^4.2.1",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
@@ -44,5 +47,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"source-map-loader": "^4.0.1"
 	}
 }
