--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
 		"@testing-library/user-event": "^13.5.0",
 		"axios": "^1.3.4",
 		"material-ui-rating": "^4.0.0-beta.2",
+		"moment": "^2.29.4",
 		"react": "^18.2.0",
+		"react-calendar": "^4.1.0",
 		"react-color": "^2.19.3",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.8.0",
