--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"axios": "^1.3.4",
+		"express": "^4.18.2",
 		"material-ui-rating": "^4.0.0-beta.2",
 		"moment": "^2.29.4",
 		"react": "^18.2.0",
