--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"@uiball/loaders": "^1.2.6",
 		"axios": "^1.3.4",
 		"express": "^4.18.2",
 		"material-ui-rating": "^4.0.0-beta.2",
