--- a/package.json
+++ b/package.json
@@ -5,17 +5,16 @@
 	"dependencies": {
 		"@emotion/react": "^11.10.6",
 		"@emotion/styled": "^11.10.6",
-		"@material-ui/core": "^5.0.0-beta.5",
-		"@material-ui/icons": "^4.11.3",
 		"@material-ui/lab": "^4.0.0-alpha.61",
-		"@material-ui/styles": "^4.11.5",
+		"@mui/material": "^5.12.2",
+		"@mui/x-date-pickers": "^6.2.1",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"@uiball/loaders": "^1.2.6",
 		"axios": "^1.3.4",
+		"dayjs": "^1.11.7",
 		"express": "^4.18.2",
-		"material-ui-rating": "^4.0.0-beta.2",
 		"moment": "^2.29.4",
 		"react": "^18.2.0",
 		"react-calendar": "^4.1.0",
